--- a/messenger/package.json
+++ b/messenger/package.json
@@ -19,11 +19,14 @@
   "homepage": "https://github.com/LuisMayo/online-steam-link-helper#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/wol": "^1.0.1",
+    "@types/ws": "^8.2.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "express": "^4.17.2",
+    "wol": "^1.0.7",
     "ws": "^8.4.0"
   }
 }
