--- a/agent/package.json
+++ b/agent/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/LuisMayo/online-steam-link-helper#readme",
   "dependencies": {
+    "@nut-tree/nut-js": "^2.0.0-RC1",
+    "@nut-tree/template-matcher": "^1.0.0-RC1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "ws": "^8.4.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.2.2"
   }
 }
