--- a/agent/package.json
+++ b/agent/package.json
@@ -4,7 +4,8 @@
   "description": "Steam link agent helper, designed to help with the login process on the target host",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
