--- a/agent/package.json
+++ b/agent/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nut-tree/nut-js": "^2.0.0-RC1",
     "@nut-tree/template-matcher": "^1.0.0-RC1",
+    "sleep-mode": "^1.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "ws": "^8.4.0"
